--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Vite + Vue</title>
   </head>
   <body>
+    <div class="cursor-outer"></div>
+    <div class="cursor-inner"></div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
